K3s/3-node_app_config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebapp
  labels:
    app: mywebapp   # This label is used by the Service selector
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mywebapp
  template:
    metadata:
      labels:
        app: mywebapp
    spec:
      containers:
        - name: mywebapp
          image: ronaldlepape/dsti-devops-project:myapp-1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: mywebapp-service
spec:
  selector:
    app: mywebapp
  type: ClusterIP
  ports:
    - port: 3080          # port in Kubernetes (middle layer)
      targetPort: 3000  # port in container (inner-most, matches "containerPort: 3000" above)
      # nodePort: 30080   # port on host (external world) - only when "type: NodePort" in spec: above
