K3s/gateway_config.yaml
# the schema is the following:
#
#   Internet -> Nginx -> Istio's ingressgateway -> Kubernetes' VirtualService -> Application's Service on port 3080 
#
#
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: webapp-gateway
spec:
  selector:
    istio: ingressgateway  # use istio default ingress gateway
  servers:
  - port:
      number: 8888
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webapp-vs
spec:
  hosts:
  - "*"  # Or a specific domain if using DNS
  gateways:
  - webapp-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: mywebapp-service # The name of the app's associated Service
        port:
          number: 3080
